--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,34 @@
+## Nome dell'applicazione
 spring.application.name=spring-la-mia-pizzeria-crud
+
+# Permette l'inizializzazione dei dati con data.sql
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=never
 
-
-
-# Data source
+# Configurazione DatabaseMySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/db_library_spring_pizzeriacrud
 spring.datasource.username=root
 spring.datasource.password=Tigre_679510
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hybernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+# Dialetto Hibernate per MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update, none)
+# Per la PRIMA VOLTA: Creiamo le tabelle e cancelliamo il database ad ogni riavvio con create
 spring.jpa.hibernate.ddl-auto = update
 
-# Impostazioni aggiuntive, utili per il testing (rimuoviamole poi)
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# Abilita l'esecuzione di data.sql per caricare dati iniziali nel database all'inizio con always
+spring.sql.init.mode=never
+
+# Disabilita l'errore `spring.jpa.open-in-view`
+spring.jpa.open-in-view=false
+
+# Configurazione del formato di data/ora per Thymeleaf e Spring MVC
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
+
+## Impostazioni aggiuntive, utili per il testing (rimuoviamole poi)
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
